# primenumbers-parallel-lockfree

./: CMakeLists.txt  LICENSE  main.c  main.h  print_primenumber_thread.c  print_primenumber_thread.h  queue.c  queue.h  search_primenumber_thread.c  search_primenumber_thread.h  threads.c  threads.h  util.c  util.h
